--- a/Dashboard/Dashboard.css
+++ b/Dashboard/Dashboard.css
@@ -24,7 +24,7 @@ height:100vw;
     display: flex;
     flex-direction: column;
     width: 20%;
-    min-width: 30%;
+    min-width: 10%;
 }
 
 
@@ -36,17 +36,16 @@ width: 80%;
 }
 
 
-nav{position: sticky;}
-
-aside{position: sticky;}
-
 a{
         text-decoration: none;
 
 }
 .SmartRx-bar{
     background-color: white;
-    padding: 10px;
+
+    display: flex;
+    justify-content: left;
+    padding: 25px;
 }
 
 .SmartRx_board{
@@ -123,7 +122,7 @@ ul {
 .s-aside{ 
     padding: 20px;
     background-color: white;
-    height: 90vw;
+height: 100%;
 }
 
 .aside_li0>a{
@@ -132,10 +131,17 @@ ul {
     color: black;
 }
 
+.menu{
+    height: 92.5%;
+}
+
 .aside-foot{
     position: relative;
-    top: 64vw;
+    display: flex;
+    flex-direction: column;
+
     color: #B7B7B7;
+
 }
 
 .fristpag{
@@ -151,7 +157,9 @@ flex-direction:initial;
        padding: 10px;
 
 }
-.fristpag>p{display: flex; height:110px;}
+.fristpag>p{
+    display: flex; height:110px;
+}
 .more-button{
     width: 160px;
     height: 50px;
@@ -173,6 +181,7 @@ width: 100%;
     display: flex;
     flex-direction: column;
     width: 75%;
+    justify-content: space-around;
 }
 
 .news-section .right-div{
@@ -187,12 +196,19 @@ justify-content: flex-start;
     position: relative;
 }
 
+
+.two-divs-in-one{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
 .secondpag{
     display: flex;
     flex-direction: column;
     position: relative;
     padding: 15px;
-    margin-left:95px;
+    margin-left:60px;
     background-color: white;
     width: 366px;
     height: 235px;
@@ -209,7 +225,8 @@ left: 7.2vw;
     text-align: center;
 }
 
-.Appointments-word{    color: #667085;
+.Appointments-word{   
+     color: #667085;
         text-align: center;
     font-size:15px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -236,7 +253,6 @@ left: 7.2vw;
     background-color: white;
     width: 366px;
     height: 235px;
-    align-self: flex-end;
 
 
 }
@@ -255,7 +271,8 @@ left: 7.2vw;
 }
 
 
-.title{position: relative;
+.title{
+    position: relative;
     color: #053273;
         font-size:20px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -318,14 +335,29 @@ left: 7.2vw;
  .target-section{
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
  } 
 
-.target-section .left-tar-div{
+.target-section .left-tar-div{ 
+       background-color: white;
+    display: flex;
+    flex-direction: column;
+    height: 75%;
+    padding: 15px;
     width: 30%;
 }
 
+.target-section .right-tar-div{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    height: 75%;
+    padding: 15px;
+}
 
-
+/*******************************************************************************************************************/
+/*******************************************************************************************************************/
 
 .percent{
     position: relative;
@@ -348,6 +380,12 @@ left: 7.2vw;
     top: 1vw;
 }
 
+.arrows{
+    display: flex;
+    flex-direction: column;
+    flex-wrap:initial;
+    justify-content: flex-start;
+}
 .arrow-title{
     position: relative;
     left: 0.3vw;
@@ -446,25 +484,23 @@ padding: 10px;
     
 }
 
-.Upcoming-Appointments{
-    position: relative;
-
-padding: 10px;    padding-left:30px ;
-background-color: white;
-width:60vw;
-height: 25vw;
-}
 .title0{
     position: relative;
-    transform: translate(0vw,-2.5vw);
 }
 
+.appointments-section{
+    display: flex;
+    flex-direction:column ;
+    background-color: white;
+    height: 30%;
+width: 80%;
+margin-left: 20px;
+padding: 15px;
+}
 
 .Appointments-table{
     position: relative;
-    top: -1.100vw;
     font-family: 'Gilroy-Bold', sans-serif;
-    font-size: 15px;
 
 }
 .id{
