--- a/smartRxAddclinic/ClinicServicesPageComponent.razor.css
+++ b/smartRxAddclinic/ClinicServicesPageComponent.razor.css
@@ -24,8 +24,7 @@
 .right-buttons {
     display: flex;
     justify-content: space-between;
-    width: 30%;
-    padding: 10px
+gap:8px;    padding: 10px
 }
 
     .right-buttons button:nth-of-type(1) {
@@ -33,7 +32,8 @@
         border: 0;
         border-radius: 6px;
         color: rgba(1, 126, 245, 1);
-        font-size: 17px;
+        font-size: 14px;
+        padding:8px 14px;
     }
 
     .right-buttons button:nth-of-type(2) {
@@ -41,7 +41,9 @@
         border: 0;
         border-radius: 6px;
         color: rgba(1, 126, 245, 1);
-        font-size: 17px;
+        font-size: 14px;
+        padding:8px 14px;
+
     }
 
     .right-buttons button:focus {
@@ -51,7 +53,7 @@
 /***************************************/
 .left-buttons {
     display: flex;
-    width: 20%;
+    gap:12px;
     justify-content: space-between;
     padding: 10px;
 }
@@ -62,7 +64,7 @@
     color: white;
     border-radius: 9px;
     height: 100%;
-    width: 69%;
+    padding:7px 19px;
 }
 
 .services-search-div {
@@ -81,7 +83,7 @@ input[type="search"] {
     font-family: 'Inter';
     font-size: 14px;
     color: #9499A1;
-    width: 35%;
+    width: 54%;
     padding: 11px;
     border: 1px solid;
 }
@@ -94,17 +96,20 @@ input[type="search"] {
 
 .Services-title {
     display: flex;
-    justify-content: space-around;
-    font-size: 21px;
-    height: 27px;
+    justify-content: space-between;
+    font-size: 16px;
+    height: 48px;
+    gap: 91.75px;
+    padding: 5px;
 }
 /***************************************************************************************************************/
 .services-div {
     display: flex;
     justify-content: space-around;
-    width: 97%;
+    width: 100%;
     flex-direction: column;
     height: 431px;
+    padding:10px;
 }
 
 .services-type {
