--- a/SmartRx2/SmartRx2/Components/Layout/NavMenu.razor.css
+++ b/SmartRx2/SmartRx2/Components/Layout/NavMenu.razor.css
@@ -95,3 +95,17 @@ input[type="checkbox"]:checked + .button-label {
         color: white;
         font-size: large;
     }
+
+/********************************************************************************/
+@media (min-width:315px) and (max-width:480px){
+    .buttons-continar {
+        display: none;
+    }
+
+    .sign-in-button{
+
+        display:none;
+    }
+
+}
+
