--- a/SmartRx2/SmartRx2/Components/Pages/Home.razor
+++ b/SmartRx2/SmartRx2/Components/Pages/Home.razor
@@ -8,10 +8,17 @@
         <p class="">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit.
         </p>
+        <br />
+
+        <div class="mobile-model-div">
+            <button>Try it now <img src="/imgs/arrow-right-02-round.png" alt="Alternate Text" /></button>
+            <img src="/imgs/arrow.png" alt="Alternate Text" class="arrow-img">
+        </div>
+
         <br>
-        <img src="/imgs/image-1.png" alt="Alternate Text" />
+        <img src="/imgs/image-1.png" alt="Alternate Text" class="model-smartrx">
     </div>
-    <br />
+    <br>
 
     <div class="services-info-div" id="services">
         <div class="services-containar">
@@ -211,7 +218,14 @@
 
             </div>
 
+
         </div>
+    
+    </div>
+
+    <div class="mobil-model-smartra-link">
+        <a href="#">Privacy & Policy</a>
+        <a href="#">Terms & conditions</a>
     </div>
 
     <hr>
