--- a/SmartRx2/SmartRx2/Components/Pages/Home.razor.css
+++ b/SmartRx2/SmartRx2/Components/Pages/Home.razor.css
@@ -34,7 +34,11 @@
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
 
-  .info-div b {
+.mobile-model-div{
+    display:none;
+}
+
+.info-div b {
     position: absolute;
     width: 209px;
     height: 49px;
@@ -271,6 +275,7 @@
     background: #FFFFFF;
     border: 1px solid #CED8DF;
     border-radius: 6px;
+    color:#CED8DF;
 
 }
     .Personal-data textarea {
@@ -303,6 +308,7 @@
     height: 500px;
     justify-content: space-around;
     align-items: center;
+    padding:10px;
 }
 /************************************************/
 .smart4 {
@@ -451,6 +457,7 @@
         background: #F4F4F4;
         border-radius: 32px;
         border: 0;
+        color: #CED8DF;
     }
 
     .enter-email-div button {
@@ -472,4 +479,133 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+/**************************************/
+.mobil-model-smartra-link{
+    display:none;
+}
+/**********************************************************************************/
+@media (min-width:315px) and (max-width:480px) {
+    .mobile-model-div {
+        display: flex;
+        gap: 18px;
+        height: 163px;
+    }
+
+        .mobile-model-div button {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 4px;
+            width: 161px;
+            height: 32px;
+            background: #FFB050;
+            border-radius: 13.0208px;
+            justify-content: center;
+            color: white;
+            font-size: larger;
+            border: 0;
+        }
+
+        .mobile-model-div .arrow-img {
+            width: 103px;
+        }
+
+    .model-smartrx, .smartrx-last-div {
+        width: 100%
+    }
+
+    .services-containar a:nth-child(6),
+    .right-div, .asked-questions-continar b, .smartrx-p, .pags-part-div, .top-row, .smartrx-last-div>p {
+        display: none;
+    }
+
+    .services-info-div {
+        height: 1393px;
+    }
+
+    .services-type {
+        flex-direction: column;
+        align-items: center;
+        gap:20px;
+    }
+
+    .comment-viwe {
+        left: 81px;
+        top: 2543px;
+    }
+
+.left-div{
+    gap:90px;
+}
+    .left-div, .Personal-data input[type="text"], .Personal-data input[type="email"],.Personal-data textarea {
+        width: 100%;
+    }
+
+    .contact-us-title, .Personal-data, .Personal-data form {
+        align-items: center;
+    }
+
+    .submit-button {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 4px;
+        width: 93px;
+        height: 31px;
+        background: #18181B;
+        border-radius: 13.0208px;
+        justify-content: center;
+    } 
+    
+    .left-div p{
+        font-size: 25px;
+    font-weight: 700;
+       }
+    .left-div h1 {
+        font-size: 45px;
+        font-weight: 700;
+    }
+
+    .copy-rights-containar{
+        height:410px;
+        flex-direction:column;
+    }
+
+    .social-media-div{
+        align-items:center;
+    }
+        .social-media-div p ,.smartrx-div h6 {
+            font-size: 40px;
+            font-weight: 800;
+            text-align: center;
+            text-transform: uppercase;
+        }
+
+    .media-div a{
+        width:95px;
+        height:95px;
+        border-radius:100%;
+    }
+    .media-div img{
+         width:60%;
+     }
+
+    .enter-email-div input[type="email"]{
+        width:680px;
+    }
+
+    .mobil-model-smartra-link{
+        display:flex;
+        justify-content:center;
+        width:100%;
+        padding:5px;
+
+    }
+    .mobil-model-smartra-link a{
+        text-decoration:none;
+        color:black;
+        font-size:30px;
+        font-weight:500;
+     }
 }
