--- a/SmartRx2/SmartRx2/Components/Layout/NavMenu.razor
+++ b/SmartRx2/SmartRx2/Components/Layout/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="nav-containar">
+﻿
+
+<div class="nav-containar">
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="chevron-up">
         <img class="chevron-up-child" alt="" src="/Imgs/SmartRx-icon.svg" />
