--- a/SmartRx2/SmartRx2/Components/Pages/Home.razor
+++ b/SmartRx2/SmartRx2/Components/Pages/Home.razor
@@ -2,12 +2,18 @@
 <PageTitle>Home</PageTitle>
 
 <div class="main-containar">
-    <div class="info-div" id="info">
-        <p class="title">Complete <b></b> Health <br> Care For You  </p>
 
-        <p class="">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-        </p>
+    <div class="info-div" id="info">
+        <divc class="title-div">
+            <p class="title">Complete <b></b> Health <br> Care For You  </p>
+
+            <p class="">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            </p>
+
+        </divc>
+
+
         <br />
 
         <div class="mobile-model-div">
@@ -50,7 +56,7 @@
          <br />
 
         <div class="services-type-containar">
-            <div>
+            <div class="services-type-title">
                 <p class="title-2">Diffrent Type Of Services</p>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                     <br />
