--- a/SmartRx2/SmartRx2/Components/Layout/NavMenu.razor.css
+++ b/SmartRx2/SmartRx2/Components/Layout/NavMenu.razor.css
@@ -1,3 +1,4 @@
+
 *{
     box-sizing:border-box;
 }
@@ -97,15 +98,14 @@ input[type="checkbox"]:checked + .button-label {
     }
 
 /********************************************************************************/
-@media (min-width:315px) and (max-width:480px){
-    .buttons-continar {
-        display: none;
+@media (min-width:1002px) and (max-width:1445px){
+
+    .nav-containar{
+        gap:75px;
     }
-
-    .sign-in-button{
-
-        display:none;
-    }
-
+.buttons-continar{
+    width:56%
 }
 
+    
+}
