--- a/SmartRx2/SmartRx2/Components/Pages/CommentsComponent.razor.css
+++ b/SmartRx2/SmartRx2/Components/Pages/CommentsComponent.razor.css
@@ -21,11 +21,41 @@
 }
 
     .user-div img {
-        width: 27%;
+        width: 18%;
     }
 
-@media (min-width:315px) and (max-width:480px){
+@media (min-width:315px) and (max-width:620px){
     .comment {
-    width:25%;
+    width:100%;
+    }
+    .comment >img{
+        width:20%;
+
+    }.comment p{
+         font-size:13px;
+     }
+}
+
+
+@media (min-width:622px) and (max-width:722px){
+    .comment {
+    width:100%;
+    }
+    .comment >img{
+        width:16%;
+
+    }.comment p{
+         font-size:13px;
+     }    
+     .user-div img {
+        width: 10%;
+    }
+
+}
+
+@media (min-width:724px) and (max-width:1237px){
+    .comment {
+        width: 28%;
+        height: 311px;
     }
 }
