--- a/SmartRx2/SmartRx2/Components/Pages/QuestionsComponent.razor.css
+++ b/SmartRx2/SmartRx2/Components/Pages/QuestionsComponent.razor.css
@@ -40,3 +40,15 @@
     .less-button img {
         width: 81%;
     }
+
+@media (min-width:315px) and (max-width:620px){
+    .asked-questions{
+        width:100%;
+    }
+}
+
+@media (min-width:622px) and (max-width:1237px){
+    .asked-questions{
+        width:100%;
+    }
+}
