--- a/SmartRx2/SmartRx2/Components/Pages/ServicesComponent.razor.css
+++ b/SmartRx2/SmartRx2/Components/Pages/ServicesComponent.razor.css
@@ -13,23 +13,39 @@
         width: 28%;
     }
 
-@media (min-width:315px) and (max-width:480px){
-.services-content{
-    align-items:center;
-    width:100%;
-    height:356px;
-}
-    .services-content img {
-        width: 12%;
+@media (min-width:315px) and (max-width:620px){
+    .services-content {
+        align-items: center;
+        width: 100%;
+        height: 196px;
+        gap: 10px;
     }
+        .services-content img {
+            width: 20%;
+        }
 
     h3 {
-        font-size: 46px;
+        font-size: 15px;
         font-weight: 700;
     }
 
     p {
-        font-size: 34px;
+        font-size: 12px;
         text-align: center;
+    }
+}
+
+
+@media (min-width:622px) and (max-width:1237px){
+    .services-content {
+        width:100%;
+        align-items:center;
+    }
+        .services-content img {
+            width: 8%;
+        }
+    h3 {
+        font-size: 17px;
+        font-weight: 600;
     }
 }
